<resources>
    <string name="app_name">Booker</string>
    <string name="logo_content_description">Livros empilhados.</string>
    <string name="alert_button">Tentar novamente</string>
    <string name="login_button">Entrar</string>
    <string name="hint_email">Digite seu email</string>
    <string name="hint_senha">Senha de acesso</string>
    <string name="hint_name">Digite seu nome</string>
    <string name="signin_button">Criar conta</string>
    <string name="link_new_account">Não tem conta? Crie aqui.</string>
    <string name="noConnectionALert">Não foi possível carregar. Verifique sua conexão com a internet e tente novamente.</string>
    <string name="title_activity_teste">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="item_about">Sobre o Booker</string>
    <string name="item_logout">Sair</string>
    <string name="item_signin">Entrar</string>
    <string name="item_create_account">Criar conta</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link_login_activity">Já tenho uma conta</string>
    <string name="hint_address">Selecionar meu endereço</string>
    <string name="button_yes">Sim</string>
    <string name="button_no">Não</string>
    <string name="no_implemented">Não implementado</string>
    <string name="ops">Ops</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_continue">Continuar</string>
    <string name="dialog_description_title">Descrição do proprietário</string>
    <string name="book_register_description_hint">Descrição do exemplar e informações importantes para quem estiver interessado em adquirir o mesmo, como o tempo de uso e estado de conservação.</string>
    <string name="book_register_price_hint">Preço de oferta pelo exemplar(0 para doações)</string>
</resources>
