<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/dialog_confirmation_title"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="Confirmação"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_confirmation_message"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/no_implemented"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_confirmation_title" />

    <View
        android:id="@+id/dialog_confirmation_text_view_middle"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_confirmation_message" />

    <Button
        android:id="@+id/dialog_confirmation_button_yes"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:text="@string/button_yes"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/dialog_confirmation_text_view_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_confirmation_message" />

    <Button
        android:id="@+id/dialog_confirmation_button_no"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:text="@string/button_no"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_confirmation_text_view_half"
        app:layout_constraintTop_toBottomOf="@+id/dialog_confirmation_message" />

    <View
        android:id="@+id/dialog_confirmation_text_view_half"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/dialog_confirmation_button_no"
        app:layout_constraintStart_toEndOf="@+id/dialog_confirmation_button_yes"
        app:layout_constraintTop_toBottomOf="@+id/dialog_confirmation_text_view_middle" />
</android.support.constraint.ConstraintLayout>