<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/dialog_offer_title"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="Negociar livro"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/dialog_offer_scroll"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/dialog_offer_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/dialog_offer_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                tools:srcCompat="@drawable/books_render" />
            <TextView
                android:id="@+id/dialog_offer_book_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_description_title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/dialog_offer_book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/dialog_offer_text_view_middle"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/dialog_offer_scroll" />

    <Button
        android:id="@+id/dialog_offer_button_yes"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:text="@string/button_continue"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        tools:layout_constraintEnd_toStartOf="@+id/dialog_offer_text_view_half"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/dialog_offer_text_view_middle" />

    <Button
        android:id="@+id/dialog_offer_button_no"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:text="@string/button_cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toEndOf="@+id/dialog_offer_text_view_half"
        tools:layout_constraintTop_toBottomOf="@+id/dialog_offer_text_view_middle" />

    <View
        android:id="@+id/dialog_offer_text_view_half"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="@android:color/darker_gray"
        tools:layout_constraintEnd_toStartOf="@+id/dialog_offer_button_no"
        tools:layout_constraintStart_toEndOf="@+id/dialog_offer_button_yes"
        tools:layout_constraintTop_toBottomOf="@+id/dialog_offer_text_view_middle" />

</android.support.constraint.ConstraintLayout>